--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                         <div style="display: flex; flex-direction: row; padding-left: 5%; font-size: 55%">
                         <p style="text-align:left; padding-right: 3%;"><strong>N. WILLIAMSBURG:</strong><br>231 Bedford Avenue, Brooklyn, NY 11211<br>Mon-Thu: 7am-5pm<br>Fri-Sun: 7am-8pm</p>
                         <p style="text-align:left; padding-right:5%"><strong>WEST VILLAGE:</strong><br>315 Bleecker Street, NY 10014<br>Mon-Sun: 7am-8pm</p>
-                        <p style="margin-left: 1%; text-align:left;"><strong>W. WILLIAMSBURG</strong><br>721 Metropolitan Avenue, Brooklyn, NY 11211<br>Mon-Sun: 7am-3p</p>
+                        <p style="margin-left: 1%; text-align:left;"><strong>W. WILLIAMSBURG</strong><br>721 Metropolitan Avenue, Brooklyn, NY 11211<br>Mon-Sun: 7am-3pm</p>
                       </div>
                       <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh; margin-bottom: 0%">
                         <div id="checklist">
