--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
                                 <a style="font-style:normal" class="next" onclick="changeSlide17(1)">&#10095;</a>
                                 </div>
                             </div>
+                              </div></div></div></div>
                     </div>
   
   <div class="receipt">
