--- a/index.html
+++ b/index.html
@@ -630,6 +630,40 @@
                                 </div>
                             </div>
                               </div></div></div></div>
+    
+                          <div class="image-container" id="gather">
+                            <div id="gathericon">
+                            <img src="./ricotta toast.PNG" alt="Gather LES NYC" onclick="handlePopupOnclick('popup18', 'Gather')"style="margin-bottom: 0%">
+                            </div>
+                            <p style="text-align: center;font-weight: 700;width: 100%">GATHER<br><span style="font-weight: 400; font-size: 100%; line-height: 80%">54 Orchard St</p>
+                            <div class="popup" id="popup18">
+                              <span class="close-btn" onclick="hidePopup('popup18')"><img src="./x.svg"></span>
+                              <div id="cafecontent">
+                              <div id="gatherlogo" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                              <img style="align-items: center; text-align: center; padding-top: 3%; margin-bottom: 1%;" src="./gather logo.png"></div>
+                              <p style="font-size: 70%; font-weight: 600; text-align: center; line-height: 1"><a href="https://www.letsgatherandplay.com/">🌐WEBSITE  </a><a href="https://www.instagram.com/gather_les">📸INSTAGRAM  </a><a href="https://g.co/kgs/hP8NBdh">📍MAPS</a></p>
+                              <div style="display: flex; flex-direction: row; padding-left: 5%; font-size: 60%;">
+                              <p style="margin-left: 1%; text-align:left;"><strong>LES:</strong><br>54 Orchard St, NY 10002<br>Mon-Fri: 8am-7pm<br>Sat-Sun: 9am-7pm</p>
+                            </div>
+                            <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh; margin-bottom: 0%">
+                              <div id="checklist">
+                                <div id="yes">
+                              <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Specialty<br>✅ WOW Factor<br>✅ Meals<br>✅ Quiet<br>✅ Photo Worthy<br>✅ Open Past 6pm</div>
+                              <div id="no">
+                              <p>❌ Sofa Seating</p></div>
+                              </div>
+                              <div id="notesfr">
+                              <p><strong>NOTES:</strong><br>• Gorgeous space, intricately interior designed<br>• Delicious sandwiches and meal offerings, more than cafe food<br>• Often hosts pop up dining events and <i>gatherings</i><br>• Outlets mainly available near the bar seating area</p></div></div>
+                              <div id="photos">
+                                <div id="slideshow">
+                                  <iframe id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.06466384361!2d-73.99333302407744!3d40.716592971393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b0009d76581%3A0x8cce82d0b4d8c842!2sGather!5e0!3m2!1sen!2sus!4v1721242927059!5m2!1sen!2sus" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                  <div>
+                                    <img id="slide18">
+                                    <a style="font-style:normal" class="prev" onclick="changeSlide18(-1)">&#10094;</a>
+                                  <a style="font-style:normal" class="next" onclick="changeSlide18(1)">&#10095;</a>
+                                  </div>
+                              </div>
+                            </div></div></div></div>
                     </div>
   
   <div class="receipt">
