--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                               <div id="cafecontent">
                               <div id="gatherlogo" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
                               <img style="align-items: center; text-align: center; padding-top: 3%; margin-bottom: 1%;" src="./gather logo.png"></div>
-                              <p style="font-size: 70%; font-weight: 600; text-align: center; line-height: 1"><a href="https://www.letsgatherandplay.com/">🌐WEBSITE  </a><a href="https://www.instagram.com/gather_les">📸INSTAGRAM  </a><a href="https://g.co/kgs/hP8NBdh">📍MAPS</a></p>
+                              <p style="font-size: 70%; font-weight: 600; text-align: center; line-height: 1"><a href="https://www.letsgatherandplay.com/">🌐WEBSITE  </a><a href="https://www.instagram.com/gather_les">📸INSTAGRAM  </a><a href="https://maps.app.goo.gl/LkGejT9WRK2XXuTaA">📍MAPS</a></p>
                               <div style="display: flex; flex-direction: row; padding-left: 5%; font-size: 60%;">
                               <p style="margin-left: 1%; text-align:left;"><strong>LES:</strong><br>54 Orchard St, NY 10002<br>Mon-Fri: 8am-7pm<br>Sat-Sun: 9am-7pm</p>
                             </div>
@@ -656,7 +656,7 @@
                               <p><strong>NOTES:</strong><br>• Gorgeous space, intricately interior designed<br>• Delicious sandwiches and meal offerings, more than cafe food<br>• Often hosts pop up dining events and <i>gatherings</i><br>• Outlets mainly available near the bar seating area</p></div></div>
                               <div id="photos">
                                 <div id="slideshow">
-                                  <iframe id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.06466384361!2d-73.99333302407744!3d40.716592971393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b0009d76581%3A0x8cce82d0b4d8c842!2sGather!5e0!3m2!1sen!2sus!4v1721242927059!5m2!1sen!2sus" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                  <iframe id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.06466384361!2d-73.99333302407744!3d40.716592971393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b0009d76581%3A0x8cce82d0b4d8c842!2sGather!5e0!3m2!1sen!2sus!4v1721242927059!5m2!1sen!2sus" width="300" height="200" style="border:0; border-radius:10px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                   <div>
                                     <img id="slide18">
                                     <a style="font-style:normal" class="prev" onclick="changeSlide18(-1)">&#10094;</a>
