--- a/index.html
+++ b/index.html
@@ -664,6 +664,40 @@
                                   </div>
                               </div>
                             </div></div></div></div>
+    
+                          <div class="image-container" id="outro">
+                            <div id="outroicon">
+                            <img src="./strawberry matcha.PNG" alt="outro NYC" onclick="handlePopupOnclick('popup19', 'Outro')"style="margin-bottom: 0%">
+                            </div>
+                            <p style="text-align: center;font-weight: 700;width: 100%">OUTRO<br><span style="font-weight: 400; font-size: 100%; line-height: 80%">816 Broadway</p>
+                            <div class="popup" id="popup19">
+                              <span class="close-btn" onclick="hidePopup('popup19')"><img src="./x.svg"></span>
+                              <div id="cafecontent">
+                              <div id="outrologo" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                              <img style="align-items: center; text-align: center; padding-top: 3%; margin-bottom: 1%;" src="./outro logo.png"></div>
+                              <p style="font-size: 70%; font-weight: 600; text-align: center; line-height: 1"><a href="https://www.outronyc.com/">🌐WEBSITE  </a><a href="https://www.instagram.com/outronyc/?hl=en">📸INSTAGRAM  </a><a href="https://maps.app.goo.gl/SgKFmmQhkPDJSY4y7">📍MAPS</a></p>
+                              <div style="display: flex; flex-direction: row; padding-left: 5%; font-size: 60%;">
+                              <p style="margin-left: 1%; text-align:left;"><strong>UNION SQUARE:</strong><br>816 Broadway, NY 10003<br>Mon-Fri: 8am-6pm<br>Sat-Sun: 10am-6pm</p>
+                            </div>
+                            <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh; margin-bottom: 0%">
+                              <div id="checklist">
+                                <div id="yes">
+                              <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Specialty<br>✅ Meals<br>✅ Quiet<br>✅ Photo Worthy<br>✅ Open Past 6pm<br>✅ Sofa Seating</div>
+                              <div id="no">
+                              <p>❌ WOW Factor</p></div>
+                              </div>
+                              <div id="notesfr">
+                              <p><strong>NOTES:</strong><br>• Lovely brunch spot with lots of breakfast options<br>• Has an outdoor space with seating<br>• Pretty dim lighting in the main indoor seating area<br>• Large tables available for group work and meetings<br>• Generally quiet with people working but with people talking it can get quite loud indoors</p></div></div>
+                              <div id="photos">
+                                <div id="slideshow">
+                                  <iframe id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12093.318133040235!2d-73.9909553!3d40.7327739!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2599912d20195%3A0xf05f25545c3910be!2soutro%20nyc!5e0!3m2!1sen!2sus!4v1721245767064!5m2!1sen!2sus" width="300" height="200" style="border:0; border-radius: 10px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                  <div>
+                                    <img id="slide19">
+                                    <a style="font-style:normal" class="prev" onclick="changeSlide19(-1)">&#10094;</a>
+                                  <a style="font-style:normal" class="next" onclick="changeSlide19(1)">&#10095;</a>
+                                  </div>
+                              </div>
+                            </div></div></div></div>
                     </div>
   
   <div class="receipt">
