--- a/index.html
+++ b/index.html
@@ -698,6 +698,39 @@
                                   </div>
                               </div>
                             </div></div></div></div>
+     <div class="image-container" id="blue stripes">
+                              <div id="bluestripesicon">
+                              <img src="./chocolate.PNG" alt="Blue Stripes" onclick="handlePopupOnclick('popup20', 'Blue Stripes')"style="margin-bottom: 0%">
+                              </div>
+                              <p style="text-align: center;font-weight: 700;width: 100%">BLUE STRIPES<br><span style="font-weight: 400; font-size: 100%; line-height: 80%">28 E 13th St</p>
+                              <div class="popup" id="popup20">
+                                <span class="close-btn" onclick="hidePopup('popup20')"><img src="./x.svg"></span>
+                                <div id="cafecontent">
+                                <div id="bluestripeslogo" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+                                <img style="align-items: center; text-align: center; padding-top: 3%; margin-bottom: 1%;" src="./blue stripes logo.png"></div>
+                                <p style="font-size: 70%; font-weight: 600; text-align: center; line-height: 1"><a href="https://bluestripescacao.square.site/">🌐WEBSITE  </a><a href="https://www.instagram.com/bluestripesnyc/?hl=en">📸INSTAGRAM  </a><a href="https://maps.app.goo.gl/Y1ywmsd3fH8ACt6J9">📍MAPS</a></p>
+                                <div style="display: flex; flex-direction: row; padding-left: 5%; font-size: 60%;">
+                                <p style="margin-left: 1%; text-align:left;"><strong>UNION SQUARE:</strong><br>28 E 13th St, NY 10003<br>Mon-Tue: 8am-8pm   Wed, Fri: 8am-10pm<br>Thu: 8am-12am (Jazz Night)<br>Sat: 9am-10pm   Sun:9am-8pm</p>
+                              </div>
+                              <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh; margin-bottom: 0%">
+                                <div id="checklist">
+                                  <div id="yes">
+                                <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Specialty<br>✅ Meals<br>✅ Open Past 6pm</div>
+                                <div id="no">
+                                <p>❌ WOW Factor<br>❌ Quiet<br>❌ Photo Worthy<br>❌ Sofa Seating</p></div>
+                                </div>
+                                <div id="notesfr">
+                                <p><strong>NOTES:</strong><br>• Tuesday - Comedy Show, Wednesday- smooth Jazz / date nights, Thursday - Funk night & jam session<br>• Next to Parsons, often filled with students<br>• Serves light brunch and croissant sandwich bites (I always get it for lunch)<br>• Known for their chocolate drinks, available in white, milk and dark<br>• Mugs get coated in thick rim of chocolate when you order a chocolate drink</p></div></div>
+                                <div id="photos">
+                                  <div id="slideshow">
+                                    <iframe id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.2450021116847!2d-73.99547192407657!3d40.73463417139023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259cc00faec69%3A0xe12962b43fdac2f9!2sBlue%20Stripes%20Cacao%20Shop!5e0!3m2!1sen!2sus!4v1721247624909!5m2!1sen!2sus" width="300" height="200" style="border:0; border-radius: 10px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                    <div>
+                                      <img id="slide20">
+                                      <a style="font-style:normal" class="prev" onclick="changeSlide20(-1)">&#10094;</a>
+                                    <a style="font-style:normal" class="next" onclick="changeSlide20(1)">&#10095;</a>
+                                    </div>
+                                </div>
+                              </div></div></div></div>
                     </div>
   
   <div class="receipt">
