--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
       <span id="number">0</span>
       <button id="increment">➕</button>
     </div></div>
-    <div style="transform: translateY(-0.7vw); margin-left: 14%; line-height: 80%;" class="thanks"><p><a style="font-size: 0.9em; font-weight: 600; color: black; margin-left: 1%" href="https://venmo.com/u/hihyning"><span style="font-size: 2em;">☕️</span> BUY ME A COFFEE<br><a href="mailto:hyninggan@gmail.com" style="font-size:0.8em;color:rgb(135, 118, 91);">&nbsp;or send me a message!</a></p>
+    <div style="transform: translateY(-0.7vw); line-height: 80%;" class="thanks"><p><a style="font-size: 0.9em; font-weight: 600; color: black; margin-left: 2%" href="https://venmo.com/u/hihyning"><span style="font-size: 2em;">☕️</span> BUY ME A COFFEE<br><a href="mailto:hyninggan@gmail.com" style="font-size:0.8em;color:rgb(135, 118, 91);">&nbsp;or send me a message!</a></p>
   </div>
 </div>
 </div>
