--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div id="yes" style="width: 70%">
       <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Photo Worthy<br>✅ Meals(@Kith)<br>✅ Outlets<br>(none@Kith)<br>✅ Open Past 6pm<br>✅ WOW Factor</p></div>
       <div id="no">
-      <p>❌ Quiet<br>(@some locations)<br>❌ Sofa Seating<br>❌ Specailty</p></div>
+      <p>❌ Quiet<br>(@some locations)<br>❌ Sofa Seating<br>❌ Specialty</p></div>
     </div>
     <div id="notesfr">
       <p style="margin-left: 3%;text-align:left"><strong>NOTES:</strong><br>• Cafe attached to flower store<br>• Kith location has full <a href="https://www.plantshed.com/plantshed-at-kith-women"><strong>MEALS</strong></a><br>• Most locations have outdoor seating<br>• Pasteries are not the freshest<br>• Ceremonial grade matcha</p></div>
@@ -138,7 +138,7 @@
 <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh">
   <div id="checklist">
     <div id="yes">
-  <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Outlets<br>✅ Sweet Treats<br>✅ Photo Worthy<br>✅ WOW Factor<br>(the food)<br>✅ Specailty</p></div>
+  <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Outlets<br>✅ Sweet Treats<br>✅ Photo Worthy<br>✅ WOW Factor<br>(the food)<br>✅ Specialty</p></div>
   <div id="no">
   <p>❌ Washroom<br>❌ Quiet<br>❌ Meals<br>❌ Sofa Seating<br>❌ Open Past 6pm</p></div>
   </div>
@@ -175,7 +175,7 @@
   <div class="notes" style="padding-left: 5%; display: flex; flex-direction: row; border-top: dotted black 1.5px; margin: 1%; padding-top: 3vh">
     <div id="checklist">
       <div id="yes">
-    <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Specailty<br>✅ Open Past 6pm</p></div>
+    <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Specialty<br>✅ Open Past 6pm</p></div>
     <div id="no">
     <p>❌ Quiet<br>(@some locations)<br>❌ Photo Worthy<br>❌ Meals<br>❌ Sofa Seating<br>❌ WOW Factor</p></div>
     </div>
