--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                         <div id="yes">
                       <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Open Past 6pm</p></div>
                       <div id="no">
-                      <p>❌ Specialty</b><br>❌ Sofa Seating<br>(ex. Tribecca)<br>❌ Photo Worthy<br>❌ WOW Factor<br>❌ Meals<br>❌ Quiet</p></div></div>
+                      <p>❌ Specialty</b><br>❌ Sofa Seating<br>(ex. Tribeca)<br>❌ Photo Worthy<br>❌ WOW Factor<br>❌ Meals<br>❌ Quiet</p></div></div>
                       <div id="notesfr">
                       <p><strong>NOTES:</strong><br>• Global coffee chain known for their minimalistic aesthetic<br>• All store interiors are white, clean, spacious<br>• Nola latte is one of their speciality coffees (recommend it)<br>• Tribeca location is located in a hotel, you're able to use their lobby as a work space + they have comfy chairs</p></div></div>
                       <div id="photos">
@@ -551,7 +551,7 @@
                           <div id="yes">
                         <p><strong>CHECKLIST:</strong><br>✅ Wifi<br>✅ Washroom<br>✅ Sweet Treats<br>✅ Outlets<br>✅ Open Past 6pm</p></div>
                         <div id="no">
-                        <p><br>❌ Specialty</b><br>❌ Sofa Seating<br>(ex. Tribecca)<br>❌ Photo Worthy<br>❌ WOW Factor<br>❌ Meals<br>❌ Quiet</p></div>
+                        <p><br>❌ Specialty</b><br>❌ Sofa Seating<br>(ex. Tribeca)<br>❌ Photo Worthy<br>❌ WOW Factor<br>❌ Meals<br>❌ Quiet</p></div>
                         </div>
                         <div id="notesfr">
                         <p><strong>NOTES:</strong><br>•Brooklyn based coffee shop with nature inspired interiors<br>• Open late, perfect for a long uninterrupted work session<br>• Stocks soy milk!(rare in nyc)<br>• Serves a selection of herbal and fruit teas</p></div></div>
